# codx-junior

./: .dockerignore  .env  .env.dev  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.dind  README.md  codx-junior  codx-junior-python.sh  codx-junior.pid  config.json  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  filebrowser.db  gpt-engineer  install.sh  install_api.sh  install_browser.sh  installer.sh  milvus_user.yaml  restar_api.sh  run_api.sh  run_browser.sh  run_client.sh  set_env.sh  supervisor.api.conf  supervisor.client.conf  supervisor.conf  supervisor.dind.conf  supervisor.docker.conf  supervisor.llm-factory.conf  supervisor.ollama.conf  user-entrypoint.sh  websockify-token.cfg  xinitrc  xstartup
api/: README.md  cache.json  project_watcher.py  pyproject.toml
api/.codx/: project.json  wiki_settings.json
api/.codx/logs/: ai.md
api/.codx/profiles/: analyst.profile  analyst.profile.md  model.profile  model.profile.md  project.profile  py_test.profile  software_developer.profile  software_developer.profile.md  wiki.profile  wiki.profile.md
api/.codx/tasks/: Chat in a board.md  Check project changes on new thread.md  Image to text.md  Kanban management.md  Logs api endpoint.md  New chat.md  Software analyst.md  boards.json  gnome desktop.md  kanban.json  project metrics.md
api/.codx/tasks/Agents 🥳/Knowledge/: knowledge-agent.ba724a84-7d5a-4092-8c6e-015041cea447.md  knowledge-agent.ba724a84-7d5a-4092-8c6e-015041cea447.yaml
api/.codx/tasks/Agents 🥳/To Do/: associate-chat-with-agent-content.020bae83-f9ce-418d-b964-967d9bf02de7.yaml  devops-agent-base.0fc3647e-c273-4ec5-83e6-96136d272cd0.md  devops-agent-base.0fc3647e-c273-4ec5-83e6-96136d272cd0.yaml  devops-agent.56a81795-3c95-4e4f-8bea-b60a2f50539f.md  devops-agent.56a81795-3c95-4e4f-8bea-b60a2f50539f.yaml  (+2 more)
api/.codx/tasks/Browser/: Test browser.md  browser response must be in mardown not json.md
api/.codx/tasks/Task manager/: Task manager class.md
api/codx/junior/: __init__.py  app.py  background.py  chat_heatmap.py  chat_manager.py  chat_wall.py  context.py  db.py  engine.py  globals.py  log_parser.py  main.py  mention_manager.py  model.py  profile_manager.py  project_watcher.py  scheduler.py  settings.py  task_manager.py  utils.py
api/codx/junior/agents/: base_agent.py  devops_agent.py  git_issues_agent.py
api/codx/junior/ai/: __init__.py  ai.py  ai_logger.py  anthropic.py  llmfactory.py  mistral_ai.py  ollama.py  openai_ai.py  utils.py
api/codx/junior/api/: chatGPTLikeApi.py  db_router.py  file_finder.py  github.py  users.py  wiki.py
api/codx/junior/browser/: __init__.py  browser.ipynb  browser.py  browseruse.py
api/codx/junior/changes/: change_manager.py  watch_project_file_changes.py
api/codx/junior/chat/: chat_engine.py  chat_export.py
api/codx/junior/events/: event_manager.py
api/codx/junior/file_manager/: __init__.py
api/codx/junior/knowledge/: README.md  __init__.py  knowledge.py  knowledge_code_splitter.py  knowledge_code_to_dcouments.py  knowledge_db.py  knowledge_keywords.py  knowledge_loader.py  knowledge_milvus.py  knowledge_prompts.py  knowledge_qa_splitter.py  knowledge_splitter.py  knowledge_training.py  knowledge_wiki.py  settings.py
api/codx/junior/mentions/: mention_manager.py
api/codx/junior/metrics/: chat_heatmap.py  chat_wall.py  codx_junior_metrics.py
api/codx/junior/misc/: github.py
api/codx/junior/model/: model.py  user.py
api/codx/junior/profiles/: agent-coding-task.md  analyst.profile  analyst.profile.md  browser.profile  coding_profiles.json  profile_manager.py  project.profile  software_developer  software_developer.profile  wiki.profile
api/codx/junior/profiling/: profiler.py
api/codx/junior/project/: project_discover.py  project_manager.py
api/codx/junior/prompts/: __init__.py
api/codx/junior/security/: github_oauth.py  user_management.py
api/codx/junior/sio/: model.py  session_channel.py  sio.py  sio_background.py
api/codx/junior/tools/: __init__.py  code_writer.py  fetch_webpage.py  project_search.py  project_tools.py
api/codx/junior/utils/: chat_utils.py  utils.py
api/codx/junior/whisper/: audio_manager.py
api/codx/junior/wiki/: README.md  model.py  wiki_manager.py
api/codx/junior/workspace/: workspace_manager.py
api/shared/codx-junior/scripts/: docker-compose.yaml
api/tests/: test_change_manager.py  test_project_watcher.py  test_task_manager.py  test_watcher.py
api/tests/.codx/: project.json
api/tests/changes/: watch_project_file_changes.test.py
api/tests/chat/: test_chat_manager.py
api/tests/db/: sharedcodxjuniorapitestsdb.db.json  test_chats.py  test_db.py  test_kanban.py
api/tests/mention_manager/: test_mention_manager.py
api/tests/wiki_manager/: test_wiki_manager.py
api/wiki/: .gitignore  agents.md  ai-ml.md  ai.md  api.md  application.md  codx-junior-agents-base-agent-py.md  context.md  database.md  detailed-configuration.md  home.md  index.md  knowledge-management.md  knowledge.md  miscellaneous.md  package.json  profiles.md  sio.md  welcome.md  wiki-manager.sh  wiki_settings.json
api/wiki/.vitepress/: categories.json  config.json  config.mts
api/wiki/app-module/routes/: codx-junior-api-wiki-py.md
api/wiki/engine-module/session-management/: codx-junior-agents-base-agent-py.wiki_file
browser/: README.md  browser_use.py  main.py  package-lock.json  package.json  pyproject.toml  server.js
browser/.codx/: project.json
browser/.codx/tasks/: Add knowledge.md  Broeser Api.md  Install script.md  Requierements.md  Testing.md
browser/docs/: browser-use.md
browser/tests/: test_main.py
llm-factory/: README.md  docker-compose.yaml  embeddings_text.md  main.py  model.py  ollama-tests.http  pyproject.toml  run-factory.sh
llm-factory/.codx/: project.json
llm-factory/.codx/logs/: ai.md
llm-factory/.codx/profiles/: vision.profile  vision.profile.md
llm-factory/.codx/tasks/: kanban.json
llm-factory/admin/: user.py
llm-factory/litegpt/: fine-tune.test.py  models.txt
llm-factory/scripts/: install.sh
llm-factory/tests/: test_e2e.py  test_ollama.py
(+1467 files in other folders)
