[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "codx-junior"
version = "0.1.0"
description = "Your AI coding assistant"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
  'openai',
  'pytest == 7.3.1',
  'langchain',
  'langchain-community',
  'flask>=2.0.2',
  'python-slugify>=8.0.1',
  'llama-index>=0.9.42',
  'tree_sitter>=0.20.4',
  'tree_sitter_languages',
  'tree-sitter-java',
  'tree-sitter-c-sharp',
  'tree-sitter-html',
  'uvicorn',
  'anthropic',
  'fastapi_socketio',
  'fastapi',
  'python-multipart>=0.0.20',
  'pytesseract',
  'pillow',
  'helium',
  'beautifulsoup4',
  'markdownify',
  'pymilvus',
  'watchfiles>=1.0.4',
  'mistralai>=1.4.0',
  'tinydb>=4.8.2'
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.3.1",
]
doc = [

    "autodoc_pydantic >= 1.8.0",
    "pydantic>=2.10.6",
    "myst_parser >= 0.18.1",
    "nbsphinx >= 0.8.9",
    "sphinx >= 4.5.0",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx_book_theme >= 0.3.3",
    "sphinx_rtd_theme >= 1.0.0",
    "sphinx-typlog-theme >= 0.8.0",
    "sphinx-panels >= 0.6.0",
    "toml >= 0.10.2",
    "myst-nb >= 0.17.1",
    "linkchecker >= 10.2.1",
    "sphinx-copybutton >= 0.5.1",
    "markdown-include >= 0.6.0",
    "sphinx_copybutton >= 0.5.2"
]


[project.scripts]
codx-junior = 'codx.app:app'

[tool.setuptools]
packages = ["codx"]

[tool.ruff]
select = ["F", "E", "W", "I001"]
line-length = 100
show-fixes = false
target-version = "py311"
task-tags = ["TODO", "FIXME"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[project.urls]
"Homepage" = "https://github.com/gbrian/codx-junior"
"Bug Tracker" = "https://github.com/gbrian/codx-junior/issues"

[tool.ruff.isort]
known-first-party = []
known-third-party = []
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true
split-on-trailing-comma = false
lines-between-types = 1

[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.direnv
    | \.eggs
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | venv
  )/
)
'''