[tool.poetry]
name = "codx-junior-browser"
version = "0.1.0"
description = "API project for codx-junior-browser"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
browser-use = "^1.0.0"
fastapi = "^0.70.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"