[tool.poetry]
name = "codx-llm-factory"
version = "0.1.0"
description = "A specialized service for fine-tuning Language Learning Models (LLMs) and providing search capabilities for codx projects."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

# Example dependencies (update these based on your project's requirements)
# You may need to adjust the versions or specify additional libraries as necessary.
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
torch = "^1.10.0"  # or the specific version you need
transformers = "^4.11.0"
pydantic = "^1.8.2"
requests = "^2.26.0"
numpy = "^1.21.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"

